# CG-e-PDI

Indentificador de digitais/Trabalho_Final/: CMakeLists.txt  Doxyfile  README.txt
Indentificador de digitais/Trabalho_Final/include/: Base_Dados.h  Dedo.h  Histograma.h  Imagem.h
Indentificador de digitais/Trabalho_Final/latex/: _base___dados_8cpp.tex  _base___dados_8cpp__incl.md5  _base___dados_8h.tex  _base___dados_8h__dep__incl.md5  _base___dados_8h__incl.md5  _dedo_8cpp.tex  _dedo_8cpp__incl.md5  _dedo_8h.tex  _dedo_8h__dep__incl.md5  _dedo_8h__incl.md5  _histograma_8h.tex  _histograma_8h__dep__incl.md5  _histograma_8h__incl.md5  _imagem_8h.tex  _imagem_8h__dep__incl.md5  _imagem_8h__incl.md5  annotated.tex  classbase.tex  classdedo.tex  classhistograma.tex  classimagem.tex  files.tex  index.tex  main_8cpp.tex  main_8cpp__incl.md5  refman.tex
Indentificador de digitais/Trabalho_Final/src/: Base_Dados.cpp  Dedo.cpp  Histograma.cpp  Imagem.cpp  main.cpp
Manipulação de Histogramas/Casamento de Histogramas/: app  main.cpp
Manipulação de Histogramas/Histograma/: app  main.cpp
Manipulação de Histogramas/Histograma acumulado/: app  main.cpp
Manipulação de Histogramas/Transformação linear/Limiarização/: app  main.cpp
Manipulação de Histogramas/Transformação linear/Linearização (normal)/: app  main.cpp
Manipulação de Histogramas/Transformação linear/Negativo/: app  main.cpp
Pacman/: CMakeLists.txt
Pacman/src/: Fantasma.cpp  Fantasma.hpp  Fruta.cpp  Fruta.hpp
Pacman/src/html/: annotated.html  class_fantasma-members.html  class_fantasma.html  classes.html  (+28 more)
